classDiagram
    class Main {
        +main(String[] args)
    }

    class ModelInterface {
        +String callModel(String url, InputStream fileStream)
    }

    class RequestProcessor {
        -BlockingQueue~UserRequest~ queue
        -ExecutorService executor
        -String[] modelUrls
        +void processRequests()
        +void submitRequest(UserRequest request)
    }

    class User {
        -String id
        -String name
        -String email
        +User(String id, String name, String email)
        +String getId()
        +String getName()
        +String getEmail()
    }

    class UserRequest {
        -User user
        -InputStream fileStream
        -Date requestTime
        +UserRequest(User user, InputStream fileStream, Date requestTime)
        +User getUser()
        +InputStream getFileStream()
        +Date getRequestTime()
    }

    UserRequest --> User
    RequestProcessor --> UserRequest
    RequestProcessor --> ModelInterface
    Main --> RequestProcessor